# Trip_Management

./: .gitignore  Export.csv  IDEAS.md  People_info.csv  QUICK_START.md  README.md  REQUIREMENTS.txt  SETUP.md  Trips_info.csv  Trips_info.txt  build.bat  build_run.bat  cache.csv  clean.bat  compile.bat  compileProcess.txt  dev_build.bat  ideadTemplate.md  instant_run.bat  main.cpp  quick_build.bat  run.bat
Functions/: TripManager.cpp  TripManager.h
Headers/: Date.cpp  Status.cpp  Trip.cpp  header.h
simpleQtApp/: .qmake.stash  CMakeLists.txt  Makefile  Makefile.Debug  Makefile.Release  main.cpp  main_safe.cpp  object_script.simpleQtApp.Debug  object_script.simpleQtApp.Release  simpleQtApp.pro  simpleQtApp_fast.pro  simpleQtApp_safe.pro
simpleQtApp/Managers/: FileManager.cpp  FileManager.h  Observer.cpp  Observer.h  PersonManager.cpp  PersonManager.h  TripFactory.cpp  TripFactory.h  TripManager.cpp
simpleQtApp/Models/: Date.cpp  Host.cpp  Member.cpp  Person.cpp  Trip.cpp  header.h
simpleQtApp/Test_Classes/: Member.cpp
simpleQtApp/UI/: AddPersonDialog.cpp  AddPersonDialog.h  AddTripDialog.cpp  AddTripDialog.h  EditPersonDialog.cpp  EditPersonDialog.h  EditTripDialog.cpp  EditTripDialog.h  FilterTripDialog.cpp  FilterTripDialog.h  MainWindow.cpp  MainWindow.h  ManagePeopleDialog.cpp  ManagePeopleDialog.h  ViewTripDialog.cpp  ViewTripDialog.h
simpleQtApp/debug/: moc_AddPersonDialog.cpp  moc_AddTripDialog.cpp  moc_EditPersonDialog.cpp  moc_EditTripDialog.cpp  moc_FilterTripDialog.cpp  moc_MainWindow.cpp  moc_ManagePeopleDialog.cpp  moc_ViewTripDialog.cpp  moc_predefs.h
